Fix font issues (#2)
* fixed font issues. need to refine

* moved toolbar inside the component and fixed the font issues

* partially fixed window resize issues with status bar

* fixed the scrollbar

printabale section now does not display the scrollbars

* all toolbar buttons are now armed

* basic paging works

still need to fix the status bar and toolbar and allow content to scroll

* fixed the printing with the status bar now

* save and load file implemented

* added feature to create table from the toolbar menu

--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -8,32 +8,68 @@ body {
   // font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  //text-align: center;
   color: #2c3e50;
-  //   margin-top: 30px;
   border: solid 1px black;
 }
 
 @media print {
-  body * {
-    visibility: hidden;
+  // body * {
+  //   /visibility: hidden;
+  // }
+  body {
+    border: none;
+    #app {
+      border: none;
+    }
+  }
+  nav {
+    display: none;
+  }
+  div.statusBar {
+    display: none;
   }
 
-  #printSection,
-  #printSection * {
-    visibility: visible;
-  }
+  // #printSection,
+  // #printSection * {
+  //   visibility: visible;
+  // }
 
   #printSection {
-    position: absolute;
-    left: 0;
-    top: 0;
-    box-shadow: none;
+    // display: block;
+    //position: absolute;
+    //left: 0;
+    //top: 0;
+    //box-shadow: none;
+    
+     overflow-x: hidden;
+     overflow-y: hidden;
+
+    //height: 100%;
+    // width: 100%;
+    // .pageBreak {
+    //   page-break-before: always;
+    // }
+  }
+  footer.statusBar {
+    display: none;
+  }
+
+  footer.pageBreak {
+    page-break-after: always;
   }
 
   .ProseMirror {
     box-shadow: none;
+    // border: solid 1px yellowgreen;
+    //overflow-x: hidden;
+    //overflow-y: auto;
+    width: 21.59cm;
+    margin: 0px auto;
+    height: max-content;
   }
+
+ 
+    
   //   button {
   //     display: none !important;
   //   }
@@ -157,66 +193,7 @@ nav {
 }
 */
 
-nav {
-  background-color: whitesmoke;
-  border-bottom: solid 1px black;
-  div.toolbarGroup {
-    border-right: solid 1px black;
-    display: inline-block;
-    padding: 2px 5px 2px 5px;
-    
-    div.menuPad {
-      display: inline-block;
-    }
 
-    button {
-      border: 0;
-      border-radius: 3px;
-      vertical-align: middle;
-      align-items: center;
-      &:hover {
-        background-color: #dee0e2;
-      }
-      &:focus {
-        background-color: #c8cbcf;
-      }
-    }
-
-    button.textWithIconButton {
-      display: inline-grid;
-      grid-template-columns: max-content 10px;
-      column-gap: 8px;
-      border-radius: 3px;
-      height: 29px;
-      span.txt {
-        width: 60px;
-      }
-      span.icon {
-        //margin-top:3px;
-        //height: 10px;
-      }
-    }
-  }
-}
-
-div.dropdownMenu {
-  display: none;
-  position: absolute;
-  background-color: whitesmoke;
-  border: solid 1px #ccc;
-  padding: 3px 0px 3px 0px;
-  margin: 0px 0px 0px 0px;
-  min-width: 100px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  div {
-    padding: 5px 4px 5px 4px;
-    &:hover {
-      background-color: #dee0e2;
-      cursor: pointer;
-    }
-  }
-}
 
 .dropbtn {
   background-color: #3498db;
@@ -226,9 +203,7 @@ div.dropdownMenu {
   border: none;
   cursor: pointer;
 }
-/*.dropdown {
-  display: inline-block;
-}*/
+
 // Dropdown Content (Hidden by Default)
 .dropdown-content {
   display: none;
@@ -262,17 +237,7 @@ div.dropdownMenu {
     content: attr(data-value);
   }
 }
-.subMenu-content {
-  display: none;
-  overflow: hidden;
-  position: absolute;
-  bottom: 0px;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  transform: translate(84%, 0);
-  z-index: 1122;
-}
+
 // .btnSelect {
 //   margin: 2px 0 3px 0;
 //   padding: 0 4px;
